[package]
name = "marblecomic"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.22"
rocket = "0.4.5"
maud = { version = "0.22.0", features = ["rocket"] }
vec_map = "0.8.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve"]
